apps/paperless/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  parentRefs:
    - name: lab
      namespace: gateway
  hostnames:
    - paperless.${app_domain}
  rules:
    - backendRefs:
        - name: paperless
          port: 8000
